correcting div heights and white spaces

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,8 +33,7 @@ header h1 {
 /*Game Area*/
 #game_area {
     width: 100%;
-    height:620px;
-    padding: 50px;
+    height:731px;
     background-color: cadetblue;
 }
 
@@ -44,7 +43,14 @@ footer {
     color: aliceblue;
     width: 100%;
     background-color: rgb(10, 31, 31);
-    height: 80px;    
+    height: 70px;    
     bottom:0;
     position:relative;
+}
+
+footer h2 {
+    bottom:0;
+    left:20;
+    font-size: 100%;
+    position: absolute;
 }
